# esp32-photoframe

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig.defaults  sdkconfig.defaults.seeedstudio_reterminal_e1002  sdkconfig.defaults.seeedstudio_xiao_ee02  sdkconfig.defaults.waveshare_photopainter_73
.github/workflows/: build.yml  ci.yml
components/ListLib/include/: list.h
components/ListLib/src/: list.c  list_iterator.c  list_node.c
components/axpPower/: CMakeLists.txt  axp_prot.cpp  axp_prot.h
components/axpPower/src/: XPowersLib.h  XPowersLib_Version.h
components/axpPower/src/REG/: AXP192Constants.h  AXP202Constants.h  AXP2101Constants.h  AXP216Constants.h  BQ25896Constants.h  GeneralPPMConstants.h  HUSB238Constants.h  SY6970Constants.h
components/board_hal/: CMakeLists.txt  Kconfig
components/board_hal/include/: board_seeedstudio_xiao_ee02.h
components/board_hal/src/: driver_seeedstudio_reterminal_e1002.c  driver_waveshare_photopainter_73.c
components/epaper_driver_ed2208_gca/: CMakeLists.txt  Kconfig
components/epaper_driver_ed2208_gca/src/: driver_ed2208_gca.c
components/epaper_port/: epaper_port.c  epaper_port.h
components/epaper_port/src/: driver_seeedstudio_t133a01.c
components/epaper_src/: CMakeLists.txt  DEV_Config.h  GUI_BMPfile.c  GUI_BMPfile.h  GUI_Paint.c  GUI_Paint.h  GUI_RawBuffer.c  GUI_RawBuffer.h
components/epaper_src/Fonts/: font14CN.c  font18CN.c  font22CN.c  font24.c  fonts.h
components/i2c_bsp/: CMakeLists.txt  i2c_bsp.c  i2c_bsp.h
components/improv_wifi/: CMakeLists.txt  improv_serial.cpp  improv_serial.h
components/sdcard/: CMakeLists.txt  Kconfig
components/sdcard/include/: sdcard.h
components/sdcard/src/: sdcard_sdio.c  sdcard_spi.c
components/sdcard_bsp/: sdcard_bsp.c  sdcard_bsp.h
components/shtc3_sensor/: CMakeLists.txt  shtc3_sensor.c  shtc3_sensor.h
demo/: _headers
docs/: API.md  DEV.md  demo.js  index.html  launch_demo.py
host_tests/: test_utils.cpp
main/: CMakeLists.txt  ai_manager.c  album_manager.c  ble_wake_service.c  ble_wake_service.h  color_palette.c  config.h  config_manager.c  config_manager.h  display_manager.c  display_manager.h  ha_integration.c  ha_integration.h  http_server.c  idf_component.yml  image_processor.c  image_processor.h  main.c  ota_manager.c  ota_manager.h  periodic_tasks.c  periodic_tasks.h  power_manager.c  power_manager.h  processing_settings.c  processing_settings.h  testable_utils.c  testable_utils.h  utils.c  utils.h  wifi_manager.c  wifi_manager.h  wifi_provisioning.c
main/resources/: generate_calibration_bmp.py
main/webapp/: app.js  index.html  style.css
process-cli/: README.md  cli.js  image-processor.js  package-lock.json  package.json  utils.js
scripts/: generate_manifests.py  get_version.py  launch_demo.py
webapp/: .eslintrc.cjs  .prettierrc  demo.html  index.html  package-lock.json  package.json  vite.config.demo.js  vite.config.js
webapp/src/: demo-main.js  main.js
webapp/src/components/: AlbumGallery.vue  AppHeader.vue  ImageProcessing.vue  ImageUpload.vue  OtaUpdate.vue  PaletteCalibration.vue  ProcessingControls.vue  SettingsPanel.vue  ToneCurve.vue
webapp/src/plugins/: vuetify.js
webapp/src/router/: index.js
webapp/src/stores/: app.js  index.js  settings.js
webapp/src/views/: DemoPage.vue  MainApp.vue  ProvisionPage.vue
